Test/typing/should_fail/for_no_init_type.java
public class MyClass {
    public static void main(String args[]) {
        for (i=0; i < 2; i++) {
            int x = i;
        }
    }
}